css/styles.css
/* Importing Font */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

/* Variable Declarations */
:root {
    --primary-color: #1A0B2E;
    --secondary-color: #00FF88;

    --background-color: #230E3D;
    --card-color: rgba(53, 17, 101, 0.4);
}

/* Root Styles */
body {
    font-family: "Inter", sans-serif;
    color: white;
}

/* Custom Background Colors */
.bg-primary {
    background-color: var(--primary-color);
}

.bg-background {
    background-color: var(--background-color);
}

.bg-secondary {
    background-color: var(--secondary-color);
}

.bg-card {
    background-color: var(--card-color);
}

/* Typography Styles */
.primary-text {
    color: var(--primary-color);
}
.secondary-text {
    color: var(--secondary-color);
}

/* Reusable Utility Styles */
.about-paragraph {
    font-size: 1rem;
    line-height: 20px;
    color: rgba(255, 255, 255, 0.8);
    font-weight: 700;
}

.card-paragraph {
    font-size: 1rem;
    line-height: 24px;
    color: white;
    opacity: 0.6;
    font-weight: 400;
}

.card-header {
    font-size: 1.5rem;
    font-weight: 700;
    line-height: auto;
}

.section-header {
    font-size: 3rem;
    font-weight: 700;
}

/* Button Styles */
.primary-btn {
    background: linear-gradient(
        47.64deg,
        #F7E93F 0%,
        #FB09B4 50%,
        #9100F8 100%
    )
}

.secondary-btn {
    border: 1px solid var(--secondary-color);
}

/* Section Specific Styles */

/* Header Styles */
header {
    border-bottom: 1px solid #412567;
}

/* Banner Styles */
.new {
    border-radius: 1000px;
    box-shadow: 0px 3px 27px 0px rgba(0, 255, 136, 0.5);
    font-size: 1.125rem;
    font-weight: 600;
    color: #1A0B2E;
}

/* Features Styles */
#premium{
    grid-area: premium;
}
#mobile {
    grid-area: mobile;
}
#global {
    grid-area: global;
}
#interview {
    grid-area: interview;
}
#rich {
    grid-area: rich;
}

.grid-container {
    display: grid;
    gap: 30px;
    grid-template-areas:
        "premium mobile mobile"
        "premium global global"
        "interview interview rich"
}

/* Episodes Styles */
iframe {
    border-radius: 24px 24px 0 0;
}

/* Host Styles */
.icon-wrapper {
    border-radius: 50%;
    border: 1px solid #533C72;
}

/* Responsive Styles */

/* For Small Device */
@media screen and (max-width: 576px) {
    /* Common Styles */
    #header,
    .intro,
    #about, 
    #features,
    #episodes,
    #host
    {
        max-width: 100%;
    }

    #about, 
    #features {
        padding: 40px 20px;
    }

    .section-header {
        font-size: 2rem;
    }

    .bg-card {
        padding: 24px;
    }

    .episodes-card {
        padding: 0px;
    }

    /* Header Styles */
    #header {
    padding: 16px 20px;
    }

    .logo-mobile {
        width: 137px;
        height: 20px;
    }

    nav,
    .subscribe-btn {
        display: none;
    }

    .hamburger-mobile {
        display: flex;
        justify-content: center;
        align-items: center;
        color: white;
        width: 24px;
        height: 24px;
    }

    /* Banner Styles */
    #banner {
        background-image: url(../assets/hero-bg.png);
        background-repeat: no-repeat;
        background-size: 100% 100%;
        padding: 40px 20px;
    }

    .banner-title {
        font-size: 40px;
    }

    .hero-circle {
        width: 200px;
        height: 200px;
    }
    .img-container {
        margin-bottom: 24px;
    }

    .microphone {
        width: 47px;
        height: 70px;
    }
    
    /* About Styles */
    .about-paragraph {
        font-weight: 400;
    }
    
    #about .secondary-text {
    font-size: 2.5rem;
    }

    .about-stats-grid {
        grid-template-columns: repeat(2, 1fr);
    }
    /* Features Styles */
    .grid-container {
        grid-template-areas:
            "premium"
            "mobile"
            "global"
            "interview"
            "rich";
    }

    .featured {
        font-size: 22px;
    }

    /* Episodes Styles */
    #episodes {
        padding: 40px 20px 60px 20px;
    } 

    .episodes-title {
        margin-bottom: 1.5rem; /* mb-6 */
    }

    .episodes-container {
        display: flex;
        flex-direction: column;
        gap: 16px;
        align-items: center;
    }

    .video {
        font-size: 20px;
    }

    /* Host Styles */
    #host {
        padding-bottom: 40px;
    }

    .host-title {
        margin-bottom: 1.5rem; /* mb-6 */
    }

    .host-name {
        font-size: 1.5rem;
    }

    .host-container {
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    .host-socials {
        justify-content: center;
    }

    /* Footer Styles */
    #footer {
        padding: 40px 20px;
        margin: 0 auto;
    }

    footer {
        background-size: 100% 100%;
    }

    .footer-logo {
        width: 219px;
        height: 32px;
    }

    .footer-links {
        flex-direction: column;
        gap: 16px;
        align-items: center;
    }
}

